# airpulse

./: .env.example  .gitignore  Cargo.toml  README.md  setup.py
firmware/hwtest/: hwtest.ino
firmware/recon/: recon.ino
firmware/standalone/: standalone.ino
firmware/test/: test.ino
src/: aggregator.rs  bridge.rs  broadcaster.rs  llm.rs  main.rs  oui.rs
static/: index.html
