
[package]
name = "wifi-recon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio             = { version = "1", features = ["full"] }
axum              = { version = "0.7", features = ["ws"] }
axum-extra        = { version = "0.9", features = ["typed-header"] }
tokio-tungstenite = "0.21"
tungstenite       = "0.21"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
dashmap           = "5"
reqwest           = { version = "0.11", features = ["json", "stream"] }
dotenvy           = "0.15"
tracing           = "0.1"
tracing-subscriber = "0.3"
futures-util      = "0.3"
tower-http        = { version = "0.5", features = ["fs"] }
